fix: menu item align

--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -74,6 +74,10 @@
     }
   }
 
+  &-item > span {
+    position: absolute;
+  }
+
   // https://github.com/ant-design/ant-design/issues/19809
   &-item > .@{ant-prefix}-badge > a {
     color: @menu-item-color;
